crates/embucket-functions/src/tests/table/snapshots/query_result_scan_invalid_query_id.snap
---
source: crates/embucket-functions/src/tests/table/result_scan.rs
description: "\"SELECT * FROM result_scan('aa')\""
---
"Error: External error: invalid digit found in string"
