crates/embucket-functions/src/tests/table/snapshots/query_result_scan_last_query_id.snap
---
source: crates/embucket-functions/src/tests/table/table.rs
description: "\"SELECT * FROM result_scan(last_query_id())\""
---
Ok(
    [
        "+-----+---+-------+",
        "| a   | b | c     |",
        "+-----+---+-------+",
        "| 1.0 | 2 | true  |",
        "| 2.0 | 4 | false |",
        "+-----+---+-------+",
    ],
)
