crates/embucket-functions/src/tests/table/snapshots/query_result_scan_missing_query_id.snap
---
source: crates/embucket-functions/src/tests/table/table.rs
description: "\"SELECT * FROM result_scan('500')\""
---
"Error: External error: Query execution error: Query not found"
