crates/embucket-functions/src/tests/table/snapshots/query_result_scan_query_id_filter.snap
---
source: crates/embucket-functions/src/tests/table/table.rs
description: "\"SELECT * FROM result_scan('1') WHERE a > 1\""
---
Ok(
    [
        "+-----+---+-------+",
        "| a   | b | c     |",
        "+-----+---+-------+",
        "| 2.0 | 4 | false |",
        "+-----+---+-------+",
    ],
)
